:sparkles: feat: Adiciona inicio de DOM3

--- a/Terceiro-Periodo/PII/DOM-Exercicio02/index.html
+++ b/Terceiro-Periodo/PII/DOM-Exercicio02/index.html
@@ -7,10 +7,16 @@
     <title>Manipulação de D.O.M.</title>
 </head>
 <body>
-    <a href="src/pages/exibir-erro/">1 - Exibir erro</a>
-    <a href="src/pages/exibir-texto/">2 - Exibir texto</a>
-    <a href="src/pages/calcular-engajamento/">3 - Calcular engajamento</a>
-    <a href="src/pages/carregar-imagem/">4 - Carregar imagem</a>
-    <a href="src/pages/galeria-imagem/">5 - Escolher imagem</a>
+    <h1>Exercício - D.O.M. 2</h1>
+    <div class="container">
+        <a href="src/pages/exibir-erro/">1 - Exibir erro</a>
+        <a href="src/pages/exibir-texto/">2 - Exibir texto</a>
+        <a href="src/pages/calcular-engajamento/">3 - Calcular engajamento</a>
+        <a href="src/pages/carregar-imagem/">4 - Carregar imagem</a>
+        <a href="src/pages/galeria-imagem/">5 - Escolher imagem</a>
+        <a href="src/pages/redes-favoritas/">6 - Redes Sociais Favoritas</a>
+        <a href="src/pages/hashtags/">7 - Adicionar Hashtags</a>
+        <a href="#">10 - Ativos Financeiros</a>
+    </div>
 </body>
 </html>
