--- a/Terceiro-Periodo/PII/DOM-Exercicio02/src/pages/redes-favoritas/index.html
+++ b/Terceiro-Periodo/PII/DOM-Exercicio02/src/pages/redes-favoritas/index.html
@@ -8,6 +8,36 @@
     <title>Redes Sociais favoritas</title>
 </head>
 <body>
-    
+    <h1>Redes Sociais Favoritas</h1>
+    <div class="container">
+        <div>
+            <input type="checkbox" name="redes-sociais" id="checkbox-facebook" value="facebook">
+            <label for="checkbox-facebook">Facebook</label>
+        </div>
+        <div>
+            <input type="checkbox" name="redes-sociais" id="checkbox-twitter" value="twitter">
+            <label for="checkbox-twitter">twitter</label>
+        </div>
+        <div>
+            <input type="checkbox" name="redes-sociais" id="checkbox-instagram" value="instagram">
+            <label for="checkbox-instagram">instagram</label>
+        </div>
+        <div>
+            <input type="checkbox" name="redes-sociais" id="checkbox-linkedin" value="linkedin">
+            <label for="checkbox-linkedin">linkedin</label>
+        </div>
+        <div>
+            <input type="checkbox" name="redes-sociais" id="checkbox-tiktok" value="tiktok">
+            <label for="checkbox-tiktok">tiktok</label>
+        </div>
+    </div>
+    <div>
+        <div class="oculto mensagem-erro" id="div-mensagem-erro">Selecione pelo menos uma rede</div>
+        <div id="div-redes-selecionadas"></div>
+        <button id="button-enviar-selecao">Enviar Seleção</button>
+    </div>
 </body>
+<footer>
+    <a href="../../../">Voltar ao início</a>
+</footer>
 </html>
