--- a/Terceiro-Periodo/PII/DOM-Exercicio02/src/pages/calcular-engajamento/index.html
+++ b/Terceiro-Periodo/PII/DOM-Exercicio02/src/pages/calcular-engajamento/index.html
@@ -8,12 +8,16 @@
     <title>Calcular taxa de engajamento</title>
 </head>
 <body>
-    <input type="text" name="numero-interacoes" id="input-numero-interacoes">
-    <input type="text" name="numer-visualizacoes" id="input-numero-visualizacoes">
-    <button id="button-calcular-engajamento">Calcular</button>
-    
-    <div id="div-mensagem-erro" class="mensagem mensagem-erro oculto">Insira um valor numérico válido</div>
-    <div id="div-resultado" class="mensagem"></div>
+    <div class="container">
+        <label for="input-numero-interacoes">Interações</label>
+        <input type="text" name="numero-interacoes" id="input-numero-interacoes">
+        <label for="input-numero-visualizacoes">Visualizações</label>
+        <input type="text" name="numer-visualizacoes" id="input-numero-visualizacoes">
+        <button id="button-calcular-engajamento">Calcular</button>
+        
+        <div id="div-mensagem-erro" class="mensagem mensagem-erro oculto">Insira um valor numérico válido</div>
+        <div id="div-resultado" class="mensagem"></div>
+    </div>
 </body>
 <footer>
     <a href="../../../">Voltar ao início</a>
