--- a/Terceiro-Periodo/PII/DOM-Exercicio02/src/pages/exibir-erro/index.html
+++ b/Terceiro-Periodo/PII/DOM-Exercicio02/src/pages/exibir-erro/index.html
@@ -8,8 +8,10 @@
     <title>Mostrar Erro</title>
 </head>
 <body>
-    <button id="button-erro">Mostrar erro</button>
-    <div id="div-mensagem-erro" class="mensagem mensagem-erro oculto">O campo deve ser preenchido (não me pergunte qual)</div>
+    <div class="container">
+        <button id="button-erro">Mostrar erro</button>
+        <div id="div-mensagem-erro" class="mensagem mensagem-erro oculto">O campo deve ser preenchido (não me pergunte qual)</div>
+    </div>
 </body>
 <footer>
     <a href="../../../">Voltar ao início</a>
